--- a/cems-SPA/src/app/admin/user-management/user-management.component.html
+++ b/cems-SPA/src/app/admin/user-management/user-management.component.html
@@ -8,7 +8,7 @@
         </tr>
         <tr *ngFor="let user of users">
             <td>{{user.id}}</td>
-            <td>{{user.userName}}</td>
+            <td>{{user.username}}</td>
             <td>{{user.roles}}</td>
             <td>
                 <button class="btn btn-info m-1" (click)="editRolesModal(user)">Edit Roles</button>
