--- a/cems-SPA/src/app/dashboard/dashboard.component.html
+++ b/cems-SPA/src/app/dashboard/dashboard.component.html
@@ -1,29 +1,64 @@
 <div class="container p-3 text-center">
-  <!--
-    <div class="row">
-        <div class="col">
-            <app-log-list [logs]="logs"></app-log-list>
+    <!--
+      <div class="row">
+          <div class="col">
+              <app-log-list [logs]="logs"></app-log-list>
+          </div>
+      </div>
+    -->
+    <form class="form-inline justify-content-end" #form="ngForm" (ngSubmit)="loadLogs()" novalidate>
+        <div class="form-group">
+            <label for="timeValue">Last </label>
+            <input type="number" class="form-control ml-1" style="width:70px" id="timeValue" name="timeValue"
+                   [(ngModel)]="userParams.timeValue"/>
         </div>
-    </div>
-  -->
-  <table class="table table-stripped table-hover table-bordered">
-    <thead class="thead-light">
-      <tr>
-        <th>Id</th>
-        <th>Message</th>
-        <th>Source</th>
-        <th>Timestamp</th>
-        <th>Programming language</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let log of (logs$ | async)" [routerLink]="['/logDetails', log.id]">
-        <td>{{ log.id }}</td>
-        <td>{{ log.message }}</td>
-        <td>{{ log.source }}</td>
-        <td>{{ log.timestamp | date: 'medium' }}</td>
-        <td>{{ log.progLanguage }}</td>
-      </tr>
-    </tbody>
-  </table>
+        <div class="form-group">
+            <label for="timeUnits"></label>
+            <select class="form-control ml-1" style="width: 110px;" id="timeUnits" name="timeUnits"
+                    [(ngModel)]="userParams.timeUnits">
+                <option *ngFor="let unit of timeUnits" [value]="unit.value">
+                    {{unit.display}}
+                </option>
+            </select>
+            <button type="submit" class="btn btn-primary" style="margin-left: 10px">Apply Filters</button>
+            <button type="button" class="btn btn-info" (click)="resetFilters()" style="margin-left: 10px">Reset
+                Filters
+            </button>
+
+        </div>
+    </form>
+    <br>
+
+    <table class="table table-stripped table-hover table-bordered">
+        <thead class="thead-light">
+        <tr>
+            <th [class]="currentOrderBy == 'id' ? 'thActive' : '' " (click)="sort('id')">Id</th>
+            <th>Message</th>
+            <th [class]="currentOrderBy == 'source' ? 'thActive' : '' " (click)="sort('source')"> Source</th>
+            <th [class]="currentOrderBy == 'timestamp' ? 'thActive' : '' " (click)="sort('timestamp')">Timestamp</th>
+            <th [class]="currentOrderBy == 'progLng' ? 'thActive' : '' " (click)="sort('progLng')">Programming language
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let log of logs" [routerLink]="['/logDetails', log.id]">
+            <td>{{ log.id }}</td>
+            <td>{{ log.message }}</td>
+            <td>{{ log.source }}</td>
+            <td>{{ log.timestamp | date: 'medium' }}</td>
+            <td>{{ log.progLanguage }}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="d-flex justify-content-center">
+    <pagination [boundaryLinks]="true"
+                [totalItems]="pagination.totalItems"
+                [(ngModel)]="pagination.currentPage"
+                [itemsPerPage]="pagination.itemsPerPage"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
+                lastText="&raquo;">
+    </pagination>
 </div>
