--- a/cems-SPA/src/app/nav/nav.component.html
+++ b/cems-SPA/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="container">
-        <a class="navbar-brand" href="#">CEMS</a>
+        <div class="navbar-brand"  routerLinkActive="active" [routerLink]="['/']">CEMS</div>
         <div *ngIf="loggedIn()" class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ">
                 <a class="nav-item nav-link" routerLinkActive="active" [routerLink]="['/dashboard']">Dashboard</a>
