--- a/cems-SPA/src/app/users/users-edit/users-edit.component.html
+++ b/cems-SPA/src/app/users/users-edit/users-edit.component.html
@@ -60,7 +60,7 @@
             <form [formGroup]="userForm" #f="ngForm" (submit)="updateUser(userForm)">
                 <div class="form-group">
                     <label for="username">username</label>
-                    <input id="username" type="text" formControlName="username"
+                    <input readonly id="username" type="text" formControlName="username"
                            class="form-control"
                            [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
                     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
