--- a/cems-SPA/src/app/error-throw/error-throw.component.html
+++ b/cems-SPA/src/app/error-throw/error-throw.component.html
@@ -1,3 +1,5 @@
-<p>
-  error-throw works!
-</p>
+<div class="row">
+  <div class="col">
+    <button class="btn btn-error" (click)="throwError()">Throw error</button>
+  </div>
+</div>
