Added csharp error detail to Angular app Refactored models for Csharp Refactored KNN functionality Broke javascript error detail (will be fixed in next commit)

--- a/cems-SPA/src/app/dashboard/csharp/csharp-log-detail/csharp-log-detail.component.html
+++ b/cems-SPA/src/app/dashboard/csharp/csharp-log-detail/csharp-log-detail.component.html
@@ -1,3 +1,152 @@
-<p>
-  csharp-log-detail works!
-</p>
+<div [ngClass]="{ 'border bg-success mb-3': !isTopLevel && !showErrorDetails }">
+  <div class="row m-2" [ngClass]="{ clickable: !isTopLevel }" (click)="!isTopLevel && toggleErrorDetails()">
+    <div class="col col-12 bg-light border py-2">
+      <div class=" d-flex flex-row ">
+        <div class="exception-type">{{ log.name }}</div>
+        <div class="exception-file ml-3 ">{{ parseFileName() }}</div>
+      </div>
+      <div class="row">
+        <div class="col exception-message">
+          {{ log.exceptionMessage }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col  exception-date">
+          {{ log.timestamp | date: 'medium' }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col exception-date">Stackrame similarity: {{ log.distance }}</div>
+      </div>
+    </div>
+  </div>
+
+  <div [collapse]="!isTopLevel && showErrorDetails">
+    <div class="row m-2 ">
+      <div class="col col-12 bg-white border">
+        <tabset>
+          <tab heading="Info" id="tab1" class="mb-3">
+            <div class="row">
+              <div class="col h2">
+                StackTrace
+              </div>
+              <div class="col text-right my-auto mr-2"><button (click)="toggleRawStackTrace()" class="btn">RAW</button></div>
+            </div>
+            <div *ngIf="!showRawStacktrace" class="border border-bottom-0">
+              <div *ngFor="let stackFrame of log.stackTrace.stackFrames">
+                <app-csharp-stack-frame class="clickable" [stackFrame]="stackFrame"></app-csharp-stack-frame>
+              </div>
+            </div>
+            <pre *ngIf="showRawStacktrace" class="bg-light p-2 border" [innerHTML]="log.stackTraceRaw"></pre>
+            <div *ngIf="isTopLevel">
+              <div class="h2 mt-4">Similar logs</div>
+              <div *ngFor="let similarLog of similarLogs">
+                <app-csharp-log-detail [log]="similarLog" [isTopLevel]="false"> </app-csharp-log-detail>
+              </div>
+            </div>
+          </tab>
+          <tab heading="Request" id="tab1">
+            <div class="row">
+              <div class="col col-lg-8 col-sm-12">
+                <div class="h2">Headers</div>
+                <pre class="bg-light p-2 border"><code>{{ log.request.headers | json }}</code></pre>
+              </div>
+              <div class="col col-lg-3 col-sm-12 border py-2 m-3 mt-5">
+                <div class="h2">Details</div>
+                <div>
+                  <div *ngIf="log.request.body">
+                    <div class="col ">
+                      <code>{{ log.request.body }} </code>
+                    </div>
+                  </div>
+
+                  <div class="row px-3">
+                    <div class="col bg-light">
+                      <h6>Host</h6>
+                    </div>
+                    <div class="col bg-light">{{ log.request.host }}</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col">
+                      <h6>Is Https</h6>
+                    </div>
+                    <div class="col">{{ log.request.isHttps }}</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col bg-light">
+                      <h6>Method</h6>
+                    </div>
+                    <div class="col bg-light">{{ log.request.method }}</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col">
+                      <h6>Path</h6>
+                    </div>
+                    <div class="col">{{ log.request.path }}</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col bg-light">
+                      <h6>Protocol</h6>
+                    </div>
+                    <div class="col bg-light">{{ log.request.protocol }}</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col">
+                      <h6>Query</h6>
+                    </div>
+                    <div class="col">#TODO</div>
+                  </div>
+
+                  <div class="row px-3 py-1">
+                    <div class="col bg-light">
+                      <h6>Scheme</h6>
+                    </div>
+                    <div class="col bg-light">{{ log.request.scheme }}</div>
+                  </div>
+
+                  <div class="h2 my-4">Connection</div>
+                  <div *ngFor="let item of generateArray(log.connectionInfo); index as i">
+                    <div class="row px-3 py-1">
+                      <div class="col col-6" [ngClass]="{ 'bg-light': i % 2 == 0 }">
+                        <h6>{{ item.key }}</h6>
+                      </div>
+                      <div class="col col-6" style="overflow-wrap: break-word" [ngClass]="{ 'bg-light': i % 2 == 0 }">{{ item.value }}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </tab>
+          <tab heading="Host" id="tab1">
+            <div class="row">
+              <div class="col">
+                <div class="h2">
+                  Host info
+                </div>
+              </div>
+            </div>
+
+            <div class="row px-3 py-1">
+              <div class="col bg-light">
+                <h6>Host</h6>
+              </div>
+              <div class="col bg-light">{{ log.host }}:{{ log.port }}</div>
+            </div>
+
+            <div class="row px-3  py-1">
+              <div class="col">
+                <h6>App name</h6>
+              </div>
+              <div class="col">{{ log.source }}</div>
+            </div>
+          </tab>
+        </tabset>
+      </div>
+    </div>
+  </div>
+</div>
