--- a/cems-SPA/src/app/dashboard/log-detail/log-detail.component.html
+++ b/cems-SPA/src/app/dashboard/log-detail/log-detail.component.html
@@ -35,7 +35,7 @@
                   Stacktrace
                 </div>
                 <div class="card-body p-0">
-                  <app-stacktrace class="w-100" [stackTrace]="log.stackTrace"></app-stacktrace>
+                  <app-stack-frame class="clickable" [stackFrame]="log.stackTrace"></app-stack-frame>
                 </div>
               </div>
             </div>
